Partial_14Dec2021/force-app/main/default/objects/Complaints__c/Complaints__c.object-meta.xml
<CustomObject>
    <label>Complaints</label>
    <nameField>
        <displayFormat>CASE-{0000}</displayFormat>
        <label>Complaint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>