Partial_14Dec2021/force-app/main/default/objects/Complaints__c/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <label>Call Date</label>
    <type>Date</type>
</CustomField>