Partial_14Dec2021/force-app/main/default/objects/Complaints__c/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>TextArea</type>
</CustomField>