Partial_14Dec2021/force-app/main/default/objects/Complaints__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <type>TextArea</type>
</CustomField>