Partial_14Dec2021/force-app/main/default/objects/Complaints__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <label>Issues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Visited</fullName>
            </value>
            <value>
                <fullName>Invalid Phone No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>