Partial_14Dec2021/force-app/main/default/objects/Complaints__c/fields/Ref_Date__c.field-meta.xml
<CustomField>
    <fullName>Ref_Date__c</fullName>
    <label>Ref Date</label>
    <type>Date</type>
</CustomField>